--- a/input.html
+++ b/input.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NHẬP LIỆU | LED XE BUÝT TRANSERCO</title>
+    <title>NHẬP LIỆU | BẢNG ĐIỆN TỬ XE BUÝT</title>
     <link rel="stylesheet" href="css/input.css" />
     <link rel="stylesheet" href="css/font.css" />
     <link rel="icon" type="image/x-icon" href="assets/image/timbus.vn.ico" />
@@ -28,23 +28,23 @@
         <p class="InputLabel">Nhập tên xí nghiệp *</p> -->
         <table>
           <tr>
-            <td><p class="InputLabel">Nhập mã tuyến *</p></td>
+            <td><p class="InputLabel">mã tuyến *</p></td>
             <td><input id="maTuyenInput" type="text" placeholder="20A..." /></td>
           </tr>
           <tr>
-            <td><p class="InputLabel">Nhập điểm đầu *</p></td>
+            <td><p class="InputLabel">điểm đầu *</p></td>
             <td><input id="diemDauInput" type="text" placeholder="NHỔN..." /></td>
           </tr>
           <tr>
-            <td><p class="InputLabel">ĐIỂM GIŨA (OPT)</p></td>
+            <td><p class="InputLabel">ĐIỂM GIỮA</p></td>
             <td><input id="diemGiuaInput" type="text" placeholder="QL32..." class="khongBatBuoc" /></td>
           </tr>
           <tr>
-            <td><p class="InputLabel">Nhập điểm cuối *</p></td>
+            <td><p class="InputLabel">điểm cuối *</p></td>
             <td><input id="diemCuoiInput" type="text" placeholder="BX SƠN TÂY..." /></td>
           </tr>
           <tr>
-            <td><p class="InputLabel">Nhập tên xí nghiệp *</p></td>
+            <td><p class="InputLabel">tên xí nghiệp *</p></td>
             <td><input id="xiNghiepInput" type="text" placeholder="XN BUS 10-10..." /></td>
           </tr>
         </table>
