--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         >
           BẢO YẾN
         </button>
-        <button class="DEMO`" onclick="chonMode('demo'), tatHieuUngNhay()">
+        <button class="DEMO`" onclick="chonMode('demo'), tatHieuUngNhay()" >
           DEMO
         </button>
       </div>
@@ -146,18 +146,32 @@
       <div class="thongTin">
         <p class="UngDungHoTroTotNhat">HỖ TRỢ TỐT NHẤT CHO</p>
         <div id="logobus">
-          <img src="assets/image/logohanoibus.png" alt="TRANSERCO HANOIBUS" />
-          <img src="assets/image/HANOI BRT.png" alt="HANOI BRT" />
-          <img src="assets/image/bus_lien_ninh.png" alt="BUSLIENINH" />
-          <img src="assets/image/baoyengroup.png" alt="BUSLIENINH" />
+          <a href="https://transerco.com.vn" target="_blank">
+            <img src="assets/image/logohanoibus.png" alt="TRANSERCO HANOIBUS" />
+          </a>
+          <a href="https://transerco.com.vn/vi/xi-nghiep-bus-nhanh-brt-ha-noi/xi-nghiep-xe-buyt-nhanh-brt-ha-noi.html" target="_blank">
+            <img src="assets/image/HANOI BRT.png" alt="HANOI BRT" />
+          </a>
+          <a href="https://lienninh.com.vn" target="_blank">
+            <img src="assets/image/bus_lien_ninh.png" alt="BUSLIENINH" />
+          </a>
+          <a href="https://transerco.com.vn/vi/trung-tam-tan-dat/trung-tam-tan-dat.html" target="_blank">
+            <img src="assets/image/tt_tan_dat.png" alt="TANDAT" />
+          </a>
+          <a href="http://baoyenbus.com/" target="_blank">
+            <img src="assets/image/baoyengroup.png" alt="BAOYENGROUP" />
+          </a>
+          <a href="https://vinbus.vn/" target="_blank">
+            <img src="assets/image/vinbus.png" alt="VINBUS" />
+          </a>
         </div>
         <p class="UngDungHoTroTotNhat">
           CHÚ Ý: ĐÓNG BĂNG, TẮT LED TRƯỚC KHI ĐỔI MODE
         </p>
         <p class="UngDungHoTroTotNhat">
-          TÁC GIẢ: <a href= "https://github.com/mhieu1296" >NGUYỄN MINH HIẾU</a>, LỚP KTPM02 ĐẠI HỌC CÔNG NGHIỆP HÀ NỘI
+          TÁC GIẢ: <a href= "https://github.com/mhieu1296" style="color: red">NGUYỄN MINH HIẾU</a>, LỚP KTPM02 KHÓA K19 ĐH CÔNG NGHIỆP HÀ NỘI ✨
           <br />
-          CODE CÓ XẤU CÁC ANH GIƠ CAO ĐÁNH KHẼ THÔI Ạ 😭
+          CODE CÓ XẤU CÁC ANH GIƠ CAO ĐÁNH KHẼ THÔI Ạ 😭 <BR/>EM KHÔNG CHO VÀO CV ĐI INTERN ĐÂU CÁC ANH 🥲
         </p>
       </div>
     </div>
