--- a/input.html
+++ b/input.html
@@ -51,9 +51,7 @@
       </div>
       <div class="NutBam">
         <button class="NhapDuLieu" onclick="NhapDuLieu()">LƯU</button>
-        <a href="/">
-          <button class="NhapDuLieu">QUAY LẠI</button>
-        </a>
+        <a href="/"><button class="NhapDuLieu">QUAY LẠI</button></a>
       </div>
       <p id="canhBao"></p>
     </div>
