--- a/input.html
+++ b/input.html
@@ -44,14 +44,14 @@
             <td><input id="diemCuoiInput" type="text" placeholder="BX SƠN TÂY..." /></td>
           </tr>
           <tr>
-            <td><p class="InputLabel">tên xí nghiệp *</p></td>
+            <td><p class="InputLabel">xí nghiệp *</p></td>
             <td><input id="xiNghiepInput" type="text" placeholder="XN BUS 10-10..." /></td>
           </tr>
         </table>
       </div>
       <div class="NutBam">
         <button class="NhapDuLieu" onclick="NhapDuLieu()">LƯU</button>
-        <a href="/"><button class="NhapDuLieu">QUAY LẠI</button></a>
+        <a href="index.html"><button class="NhapDuLieu" >QUAY LẠI</button></a>
       </div>
       <p id="canhBao"></p>
     </div>
