Them xac nhan xoa du lieu trong localstorage

--- a/hdsd.html
+++ b/hdsd.html
@@ -1,37 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HƯỚNG DẪN SỬ DỤNG | BẢNG ĐIỆN TỬ XE BUÝT</title>
-    <link rel="stylesheet" href="css/font.css" />
-    <link rel="stylesheet" href="css/hdsd.css">
-    <link rel="icon" type="image/x-icon" href="assets/image/timbus.vn.ico" />
-    <!-- <script src="js/dieu_khien_LED.js"></script>
-    <script src="js/input.js"></script>
-    <script src="js/window_onload.js"></script> -->
-    <script src="js/theme.js"></script>
-  </head>
-  <body>
-    <div class="HDSD">
-      <p id="TieuDe">HƯỚNG DẪN SỬ DỤNG</p>
-      <div id="NoiDung">
-        <h1>NHẬP THÔNG TIN TUYẾN</h1>
-      <h2>Khi khởi động lần đầu</h2>
-      <p>Khi khởi động lần đầu, bấm CHẠY ngay, bảng LED sẽ không có gì. <br/>
-        Vì lúc này, các thông tin của tuyến như maTuyen, diemDau, diemCuoi và xiNghiep chưa được nhập và lưu vào LocalStorage nên chưa thể lấy thông tin tuyến từ LocalStorage để gán vào các thẻ văn bản tương ứng.</p>
-      <img src="/assets/image/hdsd/tuyen_khong_hien_thi.png" alt="">
-      <p>Bạn phải nhập thông tin tuyến trước.</p>
-      <h2>Hướng dẫn nhập thông tin tuyến</h2>
-      <p>B1. Nhấn nút NHẬP, sẽ điều hướng đến trang NHẬP LIỆU.</p>
-      <p>B2. Tại trang NHẬP LIỆU, nhập những thông tin bắt buộc (có dấu *).</p>
-      <img src="/assets/image/hdsd/nhap_du_lieu.png" alt="">
-    </li>
-      <h1>CÁC MODE CHẠY</h1>
-      <h1>CÁC CHỨC NĂNG TRÊN BẢNG LED</h1>
-      <h1>GIAO DIỆN</h1>
-      
-      </div>
-    </div>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HƯỚNG DẪN SỬ DỤNG</title>
+  <link rel="stylesheet" href="css/hdsd.css">
+  <link rel="stylesheet" href="css/font.css">
+</head>
+<body>
+  <p class="banner">HƯỚNG DẪN SỬ DỤNG BẢNG ĐIỆN TỬ XE BUÝT BÁN TỰ ĐỘNG</p>
+  <section class="layout">
+    <div class="sidebar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam labore eveniet laboriosam fugiat molestias quae magni quos impedit iure architecto sunt eligendi doloremque atque, commodi placeat dignissimos porro facere minus.</div>
+    <div class="body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ducimus soluta deleniti animi, adipisci accusantium exercitationem quas amet veniam, fugit dolorum recusandae omnis molestiae mollitia facilis tenetur laudantium hic minima.</div>
+  </section>
+</body>
 </html>
