thay mau giao dien thanh xanh la

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="js/xac_nhan_xoa_du_lieu_tronglocal.js"></script>
   </head>
   <body>
-    <div class="LED">
+    <div class="LED"> 
       <p id="maTuyen">00</p>
       <div class="NoiDungChayChu">
         <div id="route-info">
@@ -71,16 +71,6 @@
         <button class="BAOYEN">BẢO YẾN</button>
         <button class="DEMO">DEMO</button>
       </div>
-      <p class="BangDieuKhienLabel">MÀU NỀN</p>
-      <div class="NutBam">
-        <button id="xanhduong"></button>
-        <button id="xanhla"></button>
-        <button id="cam"></button>
-        <button id="vang"></button>
-        <button id="tim"></button>
-        <button id="hong"></button>
-        <button id="do"></button>
-      </div>
       <p class="BangDieuKhienLabel">NHẬP, XÓA DỮ LIỆU TUYẾN</p>
       <div class="NutBam">
         <a href="input.html">
@@ -89,7 +79,7 @@
         <button class="NhapDuLieu">XÓA</button>
       </div>
     </div>
-    <div id="container" class="hiddenDiv">
+    <div id="container">
       <div class="trangThai">
         <p class="BangDieuKhienLabel">THÔNG TIN TUYẾN</p>
         <div class="tuyenPreview">
@@ -127,14 +117,13 @@
           <img src="assets/image/tt_tan_dat.png" alt="TANDAT" />
           <img src="assets/image/baoyengroup.png" alt="BAOYENGROUP" />
           <img src="assets/image/vinbus.png" alt="VINBUS" />
+          <img src="assets/image/oto_vantai_hatay.png" alt="">
         </div>
-        <a href="#" style="color: red;" onclick="alert('Tính năng đang được xây dựng!')">
-          <p class="UngDungHoTroTotNhat">HƯỚNG DẪN SỬ DỤNG</p>
-        </a>
+        <p class="UngDungHoTroTotNhat"">________________________________________________________</p>
         <p class="UngDungHoTroTotNhat">
-          TÁC GIẢ: <a href= "https://github.com/mhieu1296" style="color: red">NGUYỄN MINH HIẾU</a>, KTPM02 K19 HAUI ✨
+          Tác giả: <a href= "https://github.com/mhieu1296" target="_blank" style="color: red">NGUYỄN MINH HIẾU</a>, KTPM02 K19 HAUI ✨
           <br />
-          CODE CÓ XẤU CÁC ANH GIƠ CAO ĐÁNH KHẼ THÔI Ạ 😭 <BR/> VÌ SỨ MỆNH THAY THẾ CHO BIỂN LẬT! <BR/> BẢN QUYỀN CÁC LOGO THUỘC VỀ CÁC ĐƠN VỊ VẬN TẢI CÔNG CỘNG
+          Code có xấu xin các anh chị bỏ qua cho nhé 😭 <BR/> Vì sứ mệnh thay thế cho biển lật! <BR/> Bản quyền các logo thuộc về các đơn vị vận tải công cộng
         </p>
       </div>
     </div>
