xoa bo ham thua

--- a/input.html
+++ b/input.html
@@ -31,22 +31,27 @@
           <tr>
             <td><p class="InputLabel">mã tuyến *</p></td>
             <td><input id="maTuyenInput" type="text" placeholder="20A..." /></td>
+            <td><img src="assets/image/delete.png" style="zoom:10%" alt=""></td>
           </tr>
           <tr>
             <td><p class="InputLabel">điểm đầu *</p></td>
             <td><input id="diemDauInput" type="text" placeholder="NHỔN..." /></td>
+            <td><img src="assets/image/delete.png" style="zoom:10%" alt=""></td>
           </tr>
           <tr>
             <td><p class="InputLabel">ĐIỂM GIỮA</p></td>
             <td><input id="diemGiuaInput" type="text" placeholder="QL32..." class="khongBatBuoc" /></td>
+            <td><img src="assets/image/delete.png" style="zoom:10%" alt=""></td>
           </tr>
           <tr>
             <td><p class="InputLabel">điểm cuối *</p></td>
             <td><input id="diemCuoiInput" type="text" placeholder="BX SƠN TÂY..." /></td>
+            <td><img src="assets/image/delete.png" style="zoom:10%" alt=""></td>
           </tr>
           <tr>
             <td><p class="InputLabel">xí nghiệp *</p></td>
             <td><input id="xiNghiepInput" type="text" placeholder="XN BUS 10-10..." /></td>
+            <td><img src="assets/image/delete.png" style="zoom:10%" alt=""></td>
           </tr>
         </table>
       </div>
