fix lai giao dien

--- a/index.html
+++ b/index.html
@@ -109,21 +109,23 @@
         </table>
       </div>
       <div class="thongTin">
-        <p class="UngDungHoTroTotNhat">HỖ TRỢ TỐT NHẤT CHO</p>
+        <p></p>
+        <!-- <p class="UngDungHoTroTotNhat">HỖ TRỢ TỐT NHẤT CHO</p> -->
         <div id="logobus">
-          <img src="assets/image/logohanoibus.png" alt="TRANSERCO HANOIBUS" />
-          <img src="assets/image/HANOI BRT.png" alt="HANOI BRT" />
-          <img src="assets/image/bus_lien_ninh.png" alt="BUSLIENINH" />
-          <img src="assets/image/tt_tan_dat.png" alt="TANDAT" />
+          
+          <!-- <img src="assets/image/HANOI BRT.png" alt="HANOI BRT" /> -->
+          <!-- <img src="assets/image/bus_lien_ninh.png" alt="BUSLIENINH" /> -->
+          <!-- <img src="assets/image/tt_tan_dat.png" alt="TANDAT" /> -->
           <img src="assets/image/baoyengroup.png" alt="BAOYENGROUP" />
+          <img src="assets/image/logohanoibus.png" alt="TRANSERCO HANOIBUS" />
           <img src="assets/image/vinbus.png" alt="VINBUS" />
-          <img src="assets/image/oto_vantai_hatay.png" alt="">
+          <!-- <img src="assets/image/oto_vantai_hatay.png" alt=""> -->
         </div>
-        <p class="UngDungHoTroTotNhat"">________________________________________________________</p>
+        <p></p>
         <p class="UngDungHoTroTotNhat">
           Tác giả: <a href= "https://github.com/mhieu1296" target="_blank" style="color: red">NGUYỄN MINH HIẾU</a>, KTPM02 K19 HAUI ✨
           <br />
-          Code có xấu xin các anh chị bỏ qua cho nhé 😭 <BR/> Vì sứ mệnh thay thế cho biển lật! <BR/> Bản quyền các logo thuộc về các đơn vị vận tải công cộng
+          Code có xấu xin các anh chị bỏ qua cho nhé 😭 <BR/> Vì sứ mệnh thay thế cho biển lật! <BR/> Bản quyền các logo thuộc về các cty vận tải công cộng
         </p>
       </div>
     </div>
