fix bug hien thi tren dien thoai

--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
         </table>
       </div>
       <div class="thongTin">
-        <p></p>
-        <!-- <p class="UngDungHoTroTotNhat">HỖ TRỢ TỐT NHẤT CHO</p> -->
+        <p class="UngDungHoTroTotNhat">NHÀ TÀI TRỢ</p>
         <div id="logobus">
           
           <!-- <img src="assets/image/HANOI BRT.png" alt="HANOI BRT" /> -->
